# rpi-pico

./: .gitignore  .gitmodules  LICENSE  README.md
app_freertos/: CMakeLists.txt
app_freertos/src/: CMakeLists.txt  main.c
app_freertos/src/dht/: CMakeLists.txt
ble_pad/: CMakeLists.txt
ble_pad/freertos/: FreeRTOSConfig.h
ble_pad/src/: CMakeLists.txt  ble_server.c  ble_server.h  btstack_config.h  main.c  pad.c  pad.h  platform.h  temp_sensor.gatt
python/Snake_ble_pad/: ble_pad.py  snake.py
python/udp/: send.py  server.py  snake.py
